.tmp/agentOgdanAssignMdapi/unpackaged/unpackaged/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Aliyah_Portal_FAQ_Categories__c</fullName>
        <label>Aliyah Portal FAQ Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Questionnaires</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Flight</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aliyah_Portal_StepbyStep_Categories__c</fullName>
        <label>Aliyah Portal StepbyStep Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Getting Started</fullName>
                </value>
                <value>
                    <fullName>Family details</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Finalize my Aliyah</fullName>
                </value>
                <value>
                    <fullName>Life in Israel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <inlineHelpText>Indicate what information is provided in basic articles. You can create additional fields to further structure article content.</inlineHelpText>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DigitalEngagementResponse__c</fullName>
        <inlineHelpText>Provide a short response for digital engagement channels like Chat, Messaging, Social, and Bots.</inlineHelpText>
        <label>Digital Engagement Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Number__c</fullName>
        <label>Index Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InternalNotes__c</fullName>
        <inlineHelpText>Provide any internal notes.  Notes are only visible to specific internal user profiles and aren’t shared with external user profiles when the article is shared externally.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Describe the question or issue that this article answers.</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>index__c</fullName>
        <description>data fixes</description>
        <label>index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>ALL_Portal_FAQ</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>Aliyah_Portal_StepbyStep_Categories__c</columns>
        <columns>Aliyah_Portal_FAQ_Categories__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>ALL Portal FAQ</label>
    </listViews>
    <listViews>
        <fullName>ALL_Portal_Step_by_Step</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>IS_CHANNEL_CSP</columns>
        <columns>Question__c</columns>
        <columns>Aliyah_Portal_StepbyStep_Categories__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.StepByStepPortal</value>
        </filters>
        <label>ALL Portal Step by Step</label>
    </listViews>
    <listViews>
        <fullName>Agent</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>Aliyah_Portal_FAQ_Categories__c</columns>
        <columns>Aliyah_Portal_StepbyStep_Categories__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ABSTRACT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>startsWith</operation>
            <value>Amit Joshi</value>
        </filters>
        <label>Agent</label>
    </listViews>
    <listViews>
        <fullName>All_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>IS_CHANNEL_PKB</columns>
        <columns>ABSTRACT</columns>
        <columns>RECORDTYPE</columns>
        <columns>ARTICLE_CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All Articles</label>
    </listViews>
    <listViews>
        <fullName>All_portal_tips</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.TIPSPortal</value>
        </filters>
        <label>All portal tips</label>
    </listViews>
    <listViews>
        <fullName>Portal_document_types</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>Question__c</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge__kav.Documents</value>
        </filters>
        <label>ALL Portal document types</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>Aliyah_Portal_FAQ_Categories__c</columns>
        <columns>ASSIGNEDTO_USER</columns>
        <columns>IS_CHANNEL_PKB</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>Documents</fullName>
        <active>true</active>
        <description>This RT is used to store the information on document types for Aliyah portal only</description>
        <label>Documents</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This RT is used to store the information on FAQ for Aliyah portal only</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ogdan</fullName>
        <active>true</active>
        <description>This record type will hold all the Global center Ogdan articles and should not be shared when not necessary as contains sensitive company information</description>
        <label>Ogdan</label>
    </recordTypes>
    <recordTypes>
        <fullName>StepByStepPortal</fullName>
        <active>true</active>
        <label>StepByStepPortal</label>
    </recordTypes>
    <recordTypes>
        <fullName>TIPSPortal</fullName>
        <active>true</active>
        <label>TIPSPortal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>